refatoração das funções javascript

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
   <div class="container">
     <h1>Pokedex</h1>
+    <!-- <fieldset>
+      <input type="checkbox" name="poison" id="id_poison">
+      <label for="poison">Poison</label>
+      
+      <input type="checkbox" name="water" id="id_water">
+      <label for="water">Water</label>
+      
+      <input type="checkbox" name="eletric" id="id_eletric">
+      <label for="eletric">Eletric</label>
+    </fieldset> -->
     <ul data-js="pokedex" class="pokedex"></ul>
   </div>
   
